<resources>
    <string name="app_name">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="password">Password</string>
    <string name="nvbugakov_gmail_com">nvbugakov@gmail.com</string>
    <string name="bugakov">bugakov</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo">TODO</string>
    <string name="todo32">TODO</string>
    <string name="create_a_new_account">Create A New Account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="uryvkina_a">Uryvkina.A</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="drive">Drive</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="todo">TODO</string>
    <string name="bugakov_nikita">Bugakov Nikita</string>
    <string name="_20_hours">20 hours</string>
    <string name="_2500">$2500</string>
    <string name="paid">Paid</string>
    <string name="dsa">TODO</string>
    <string name="sds">TODO</string>
    <string name="vcxv">TODO</string>
    <string name="bcv">TODO</string>
    <string name="ytryrt">TODO</string>
    <string name="dsads">TODO</string>
</resources>